// Copyright (C) 2021-2024 Lightbend Inc. <https://www.lightbend.com>

//
// == Kalix TCK model test for event-sourced entities ==
// see tck/src/main/scala/kalix/tck/EventSourcedEntityTCK.scala

syntax = "proto3";

package kalix.tck.model.eventsourcedentity;

option java_package = "kalix.tck.model.eventsourcedentity";
option java_multiple_files = true;

import "kalix/annotations.proto";
import "kalix/tck/model/eventsourcedentity/event_sourced_entity_api.proto";


//
// The `EventSourcedConfigured` service is for testing entity configuration from the language support:
//
// - The entity persistence-id must be `event-sourced-configured`.
// - The passivation strategy must be set with a timeout of 100 millis.
// - The `Call` method is not required to do anything, and must return an empty `Response` message.
//
service EventSourcedConfigured {
  option (kalix.codegen) = {
    event_sourced_entity: {
      name: "EventSourcedConfiguredEntity"
      type_id: "event-sourced-configured"
      state: "Persisted"
      events: ["Persisted"]
    }
  };

  rpc Call(Request) returns (Response);
}
